--- a/site/layouts/_default/search.html
+++ b/site/layouts/_default/search.html
@@ -40,12 +40,12 @@
           <div class="post-card">
               <div class="card">
                 <div class="card-head">
-                  <a href="${link}" class="post-card-link">
+                  <a href="${link}" class="post-card-link"${ isset external } target="_blank" rel="noopener"${ end }>
                   <img class="card-img-top" src="${hero}" alt="Card Heading Image">
                   </a>
                 </div>
                 <div class="card-body">
-                  <a href="${link}" class="post-card-link">
+                  <a href="${link}" class="post-card-link"${ isset external } target="_blank" rel="noopener"${ end }>
                     <h5 class="card-title">${title}</h5>
                     <p class="card-text post-summary">${summary}</p>
                   </a>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="card-footer">
                   <span class="float-start">${date}</span>
-                  <a href="${link}" class="float-end btn btn-outline-info btn-sm">Read</a>
+                  <a href="${link}" class="float-end btn btn-outline-info btn-sm"${ isset external } target="_blank" rel="noopener"${ end }>Read</a>
                 </div>
               </div>
           </div>
