--- a/site/layouts/partials/cards/post.html
+++ b/site/layouts/partials/cards/post.html
@@ -1,12 +1,14 @@
 <div class="post-card">
   <div class="card">
     <div class="card-head">
-      <a href="{{ .RelPermalink | relLangURL }}" class="post-card-link">
+      {{ $postLink := partial "helpers/get-post-link.html" . }}
+      {{ $isExternal := .Params.externalLink }}
+      <a href="{{ $postLink }}" class="post-card-link"{{ if $isExternal }} target="_blank" rel="noopener"{{ end }}>
         <img class="card-img-top" src='{{ partial "helpers/get-hero.html" . }}' alt="Hero Image">
       </a>
     </div>
     <div class="card-body">
-      <a href="{{ .RelPermalink | relLangURL }}" class="post-card-link">
+      <a href="{{ $postLink }}" class="post-card-link"{{ if $isExternal }} target="_blank" rel="noopener"{{ end }}>
         <h5 class="card-title">{{ .Title }}</h5>
         <p class="card-text post-summary">{{ .Summary | plainify }}</p>
       </a>
@@ -19,8 +21,8 @@
           {{ .Date | time.Format ":date_full" }}
           {{ if site.Params.features.readingTime }} | {{.ReadingTime}} {{ i18n "minute" .ReadingTime }} {{ end }}</span>
       <a
-      href="{{ .RelPermalink | relLangURL }}"
-      class="float-end btn btn-outline-info btn-sm">{{ i18n "read" }}</a>
+      href="{{ $postLink }}"
+      class="float-end btn btn-outline-info btn-sm"{{ if $isExternal }} target="_blank" rel="noopener"{{ end }}>{{ i18n "read" }}</a>
     </div>
   </div>
 </div>
