--- a/site/assets/styles/override.scss
+++ b/site/assets/styles/override.scss
@@ -33,15 +33,28 @@ pre code {
 }
 
 .top-navbar.transparent-navbar {
-	background-color: #1d1d1d6b !important;
-	backdrop-filter: blur(10px);
+    background-color: #1d1d1d6b !important;
+    backdrop-filter: blur(10px);
 }
 
 #homePageBackgroundImageDivStyled {
-	filter: blur(5px);
+    filter: blur(5px);
 }
 
 /* temporarilly disable clicks on tags */
 .tags a {
-	pointer-events: none;
+    pointer-events: none;
+}
+
+.sidebar-holder,
+.sidebar {
+	height: 100% !important;
+}
+.sidebar-holder.in-post,
+.sidebar.in-post {
+    height: fit-content !important;
+}
+
+.sidebar.in-post {
+    padding-bottom: 20px;
 }
