--- a/site/layouts/partials/cards/post.html
+++ b/site/layouts/partials/cards/post.html
@@ -10,7 +10,7 @@
     <div class="card-body">
       <a href="{{ $postLink }}" class="post-card-link"{{ if $isExternal }} target="_blank" rel="noopener"{{ end }}>
         {{ if $isExternal }}
-          <i class="fa-solid fa-arrow-up-right-from-square"></i>
+          <i class="fa-solid fa-arrow-up-right-from-square" style="margin-right: 5px;"></i>
         {{ end }}
         <h5 class="card-title" style="display: inline;">{{ .Title }}</h5>
         <p class="card-text post-summary">{{ .Summary | plainify }}</p>
